--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 body {
   background-image: linear-gradient(120deg, #65f6ea 0%, #479dff 100%);
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
+
 }
 header {
   font-size: 2rem;
@@ -68,7 +70,7 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background: #3a95d1;
+  background: rgb(58, 149, 209);
   color: white;
   border: none;
   padding: 1rem;
@@ -132,9 +134,3 @@ select {
   cursor: pointer;
   pointer-events: none;
 }
-/* Transition */
-/*
-  .select:hover::after {
-    transform: scale(1.5);
-  }
-  */
