--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@ form button {
   border: none;
   /* border-radius: 5px; */
   background: white;
+  color: #479dff;
+  outline-color: #479dff;
 }
 form button {
   color: #479dff;
@@ -50,10 +52,10 @@ form button:hover {
 }
 
 .todo {
-  margin: 1rem;
+  margin: 0.6rem;
   background: white;
   font-size: 1.5rem;
-  color: black;
+  color: #2f8efc;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -132,3 +134,55 @@ select {
   cursor: pointer;
   pointer-events: none;
 }
+
+/*
+@media only screen and (max-width: 800px) {
+  body {
+    background-image: none;
+    background-color: lightblue;
+  }
+  header {
+    font-size: 1.5rem;
+  }
+
+  form input,
+  form button {
+    font-size: 1rem;
+    color: #479dff;
+    outline: black;
+  }
+
+   .select {
+    margin: 0.5rem;
+  } 
+
+  .filter-todo {
+    padding: 0.5rem;
+  }
+  form {
+    max-width: 50rem;
+  }
+
+  select {
+    width: 5rem;
+  }
+
+  .select::after {
+    content: "\25BC";
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5rem;
+    background: #479dff;
+    cursor: pointer;
+    pointer-events: none;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  body {
+    background-image: none;
+    background-color: red;
+  }
+}
+*/
