--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,7 @@ form button {
   border: none;
   /* border-radius: 5px; */
   background: white;
-  color: #479dff;
-  outline-color: #479dff;
+  color: gitblack;
 }
 form button {
   color: #479dff;
@@ -55,7 +54,7 @@ form button:hover {
   margin: 0.6rem;
   background: white;
   font-size: 1.5rem;
-  color: #2f8efc;
+  color: #000000;
   display: flex;
   justify-content: space-between;
   align-items: center;
